Added new certificate image and updated index.html

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="pro-wrap">
             <div class="position-relative mt-4">
-              <img src="assets/img/portfolio/DA.jpg" class="img-fluid rounded-4 shadow" alt="">
+              <img src="images/DA Certificate.jpg" class="img-fluid rounded-4 shadow" alt="">
             </div>
             <div class="pro-info text-center mt-2">
               <p class="fw-bold">TeqCertify Data Analytics Professional Certificate</p>
